# router/auth/userRouters.js
@@ -1,5 +1,5 @@
 import express from 'express';
-import { registerUser } from '../../controller/auth/usercontroller.js';
+import { loginUser, registerUser } from '../../controller/auth/usercontroller.js';
 
 
 const userRouter = express.Router();
@@ -11,7 +11,9 @@ const userRouter = express.Router();
 
 
 // POST Methods
-userRouter.post('/regiter', registerUser);
+userRouter.post('/register', registerUser);
+
+userRouter.post('/login', loginUser);
 
 
 
